<resources>
    <string name="app_name" translatable="false">Simplify</string>
    <string name="skip_button">Skip</string>
    <string name="picture_description">disappointed woman and the man separated by a door</string>
    <string name="header1">Get rid of confusion with other people</string>
    <string name="text1">Sometimes usual matters of communication doesn\'t work and it’s hard to remain calm and happy...\nThis app will make your words simpler to others</string>
    <string name="next_button">Next</string>
    <string name="crumbs1">ellipses, showing current screen, now the first</string>
    <string name="header2">No need to write long texts</string>
    <string name="text2">You don’t have to write even average text blocks, just take a photo of what you need or tell it to voice assistant</string>
    <string name="crumbs2">ellipses, showing current screen, now the second</string>
    <string name="header3">Available for any person</string>
    <string name="text3">Application interface designed to become friendly for any kind of users, even for people with disabilities</string>
    <string name="get_started_button">Get started</string>
    <string name="crumbs3">ellipses, showing current screen, now the third, last of them</string>
    <string name="output_placeholder">There will be simplified text</string>
    <string name="simplify_button">Simplify</string>
    <string name="input_placeholder">Enter something…</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username, username must be not empty</string>
    <string name="invalid_email">Not a valid email, email should be like letters123@letters.letters</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="icon_description">Simplify application icon</string>
    <string name="history">History</string>
    <string name="separator_line">separator line</string>
    <string name="three_black_dots">three black dots</string>
    <string name="back">back</string>
    <string name="select_language">Select language</string>
    <string name="forgot_password">Forgot password</string>f
    <string name="profile_icon">profile icon</string>
    <string name="settings_icon">settings icon</string>
    <string name="english">English</string>
    <string name="make_photo">Make photo</string>
    <string name="my_profile">My profile</string>
    <string name="your_simplification_frequency">Your simplification frequency</string>
    <string name="avatar_image">avatar image</string>
    <string name="change_info">Change info</string>
    <string name="name_surname">Name Surname</string>
    <string name="email" translatable="false">Email</string>
    <string name="join_our_community">Join our community</string>
    <string name="receive_advertisements">Receive advertisements</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="settings">Settings</string>
    <string name="simplify" translatable="false">Simplify</string>
    <string name="simplify_icon" translatable="false">simplify icon</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="text_button" translatable="false">text button</string>
    <string name="microphone_button" translatable="false">microphone button</string>
    <string name="camera_button" translatable="false">camera button</string>
    <string name="bookmarks_button" translatable="false">bookmarks button</string>
    <string name="right_icon">right icon</string>
    <string name="bookmark_icon">bookmark icon</string>
    <string name="sample_date" translatable="false">13-March-2022 14:15</string>
    <string name="this_was_an_awesome_experience">This was an awesome experience.</string>
    <string name="this_is_my_amazing_day">This is my amazing day.</string>
    <string name="input_field">Input field</string>
    <string name="enter_something_here">Enter something here</string>
    <string name="copy_button" translatable="false">copy button</string>
    <string name="speak_button" translatable="false">speak button</string>
    <string name="share_button" translatable="false">share button</string>
    <string name="clear_button" translatable="false">clear button</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="sample_int" translatable="false">5</string>
    <string name="simplified_text_will_be_here"></string>
    <string name="output_field">Output field</string>
    <string name="eye_button" translatable="false">eye button</string>
    <string name="choose_theme_text">Choose theme</string>
    <string name="option_1">Edit profile</string>
    <string name="option_2">About app</string>
    <string name="option_3">Logout</string>
    <string name="notification_title">Come here!</string>
    <string name="notification_content">You have not used our app for %d days, visit us please!</string>
    <string name="password_title">Password</string>
    <string name="email_title">Email</string>
    <string name="username_title">Username</string>
    <string name="new_password_title">New password</string>
    <string name="new_email_title">New email</string>
    <string name="new_username_title">New username</string>
    <string name="selected_language">Selected language</string>
    <string name="total_simplified">total simplified</string>
    <string name="shared_texts">shared texts</string>
    <string name="top_languages">Recently used languages count</string>
    <string name="change_greeting_title">Greeting content</string>
    <string name="change_greeting_content">Hello, %s! Have a nice day!</string>
    <string name="color_theme_title">Color theme</string>
    <string name="search_language_title">Search language</string>
    <string name="search_bookmark_title">Search a bookmark</string>
    <string name="notification_request_check_part">notifications</string>
    <string name="greeting_request_check_part">greeting</string>
    <string name="onboarding_request_check_part">onboarding</string>
    <string name="profile_change">Profile change</string>
    <string name="save">Save</string>
    <string name="exit_answer">Yes, exit from profile</string>
    <string name="cancel_answer">No, cancel</string>
    <string name="logout_ask_title">Are you sure you want to logout?</string>

    <string-array name="clickable_options">
        <item>About us</item>
        <item>Feedback</item>
        <item>Help</item>
        <item>Rate our app</item>
    </string-array>

    <string-array name="toggle_options">
        <item>Autodetect language</item>
        <item>Improve simplification</item>
        <item>Disable input hints</item>
        <item>Disable onboarding preview</item>
        <item>Disable notifications</item>
        <item>Disable greeting</item>
    </string-array>

    <string-array name="languages">
        <item>Recently used</item>
        <item>All languages</item>
        <item>Arabic</item>
        <item>Bulgarian</item>
        <item>Catalan</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Finnish</item>
        <item>French</item>
        <item>German</item>
        <item>Hungarian</item>
        <item>Indonesian</item>
        <item>Italian</item>
        <item>Norwegian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
    </string-array>
</resources>