<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingActivity1">

    <Button
        android:id="@+id/skip"
        style="@style/text_button"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/skip_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="0dp"
        android:layout_height="285dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/picture_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skip"
        app:srcCompat="@drawable/people_picture"
        app:tint="@color/base_700" />

    <TextView
        android:id="@+id/header"
        style="@style/H1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/signika_light"
        android:text="@string/header2"
        android:textAlignment="textStart"
        android:textColor="@android:color/primary_text_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picture" />

    <TextView
        android:id="@+id/main_text"
        style="@style/Body_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/signika_regular"
        android:text="@string/text2"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
        android:id="@+id/get_started"
        style="@style/primary_button"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/crumbs_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/crumbs2"
        app:layout_constraintBottom_toBottomOf="@+id/get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/get_started"
        app:srcCompat="@drawable/ic_crumbs_center" />
</androidx.constraintlayout.widget.ConstraintLayout>