<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingActivity1">

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/signika_medium"
        android:text="@string/skip_button"
        android:textColor="@color/black"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="286dp"
        android:layout_marginTop="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/people_picture11"
        app:tint="#000000"
        android:contentDescription="@string/picture_description" />

    <TextView
        android:id="@+id/header"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/signika_light"
        android:text="@string/header3"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picture" />

    <TextView
        android:id="@+id/main_text"
        android:layout_width="207dp"
        android:layout_height="78dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/signika_regular"
        android:text="@string/text3"
        android:textAlignment="center"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
        android:id="@+id/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/my_blue"
        android:fontFamily="@font/signika_medium"
        android:text="@string/get_started_button"
        android:textColor="@color/black"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/crumbs_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_crumbs_right"
        android:contentDescription="@string/crumbs3" />
</androidx.constraintlayout.widget.ConstraintLayout>