<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingActivity1">

    <Button
        android:id="@+id/skip"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:text="@string/skip_button"
        style="@style/text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="286dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/picture_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/people_picture"
        app:tint="@color/base_500" />

    <TextView
        android:id="@+id/header"
        android:layout_width="328dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/signika_variable_font_wght"
        android:letterSpacing="-0.05"
        android:text="@string/header1"
        android:textAlignment="center"
        android:textColor="@color/base_900"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/main_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picture" />

    <TextView
        android:id="@+id/main_text"
        android:layout_width="328dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/signika_regular"
        android:letterSpacing="0.03125"
        android:text="@string/text1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/base_500"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
        style="@style/primary_button"
        android:id="@+id/get_started"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text"/>

    <ImageView
        android:id="@+id/crumbs_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/crumbs1"
        app:layout_constraintBottom_toBottomOf="@+id/get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/get_started"
        app:srcCompat="@drawable/ic_crumbs_left" />
</androidx.constraintlayout.widget.ConstraintLayout>