<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HistoryActivity">

        <TextView
            android:id="@+id/my_profile"
            android:textAppearance="@style/Body_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="109dp"
            android:layout_marginEnd="109dp"
            android:text="@string/history"
            app:layout_constraintBottom_toBottomOf="@+id/back1"
            app:layout_constraintEnd_toStartOf="@+id/settings"
            app:layout_constraintStart_toEndOf="@+id/back1"
            app:layout_constraintTop_toTopOf="@+id/back1" />

        <ImageButton
            android:id="@+id/back1"
            style="@style/image_button"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_left"
            android:contentDescription="@string/back" />

        <ImageButton
            android:id="@+id/settings"
            style="@style/image_button"
            android:layout_width="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dots_vertical"
            android:contentDescription="@string/three_black_dots" />

        <ImageView
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_frame"
            app:srcCompat="@drawable/separator_drawable"
            android:contentDescription="@string/separator_line" />

        <include
            android:id="@+id/search_frame"
            layout="@layout/search_frame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back1"
            app:leftIcon="@{@drawable/ic_magnify}"
            app:rightIcon="@{null}"
            app:hint="@{ &quot;Search a bookmark&quot; }" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>