<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:minWidth="313dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:background="@drawable/output_frame_drawable"
            android:minWidth="313dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <com.example.coursework.MyEditText
                android:id="@+id/text_field"
                style="@style/io_frame"
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@null"
                android:ems="10"
                android:focusable="false"
                android:gravity="start|top"
                android:hint="@string/simplified_text_will_be_here"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:textAppearance="@style/Body_1"
                android:textColorHint="@color/base_500"
                app:layout_constraintBottom_toTopOf="@+id/copy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/copy"
                style="@style/image_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/copy_button"
                android:maxWidth="24dp"
                android:maxHeight="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_content_copy"
                app:tint="@color/base_900" />

            <ImageButton
                android:id="@+id/speak"
                style="@style/image_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/speak_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/copy"
                app:srcCompat="@drawable/ic_volume_high"
                app:tint="@color/base_900" />

            <ImageButton
                android:id="@+id/share"
                style="@style/image_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/share_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/speak"
                app:srcCompat="@drawable/ic_share"
                app:tint="@color/base_900" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title1"
            android:textAppearance="@style/Body_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/output_field"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:singleLine="false"
            android:maxLength="2000"
            android:maxLines="4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>